--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -13,6 +13,19 @@ categories:
   - title: 'Other Changes 🖇️'
     labels:
       - '*'
+change-template: '- $TITLE @$AUTHOR (#$NUMBER)'
+change-title-escapes: '\<*_&' # You can add # and @ to disable mentions, and add ` to disable code blocks.
+version-resolver:
+  major:
+    labels:
+      - 'major'
+  minor:
+    labels:
+      - 'minor'
+  patch:
+    labels:
+      - 'patch'
+  default: patch
 template: |
   ## Changes
   
